--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet">
     <!-- <link href="css/styles.css" rel="stylesheet"></link> -->
+    
   </head>
   <body>
     <!-- header -->
@@ -14,7 +19,7 @@
         <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Студия</a></li>
-          <li><a href="">Портфолио</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
@@ -25,7 +30,94 @@
     </header>
 
     <!-- main -->
-    <main></main>
+    <main>
+      <section>
+        <h1>Портфолио</h1>
+        <!-- фильтр -->
+        <ul>
+          <li><button type="button">Все</button></li>
+          <li><button type="button">Веб-сайты</button></li>
+          <li><button type="button">Приложения</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <!-- карточки -->
+        <ul>
+          <!-- 1 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-1.jpg" alt="Внешний вид веб-сайта" width="370">
+              <h2>Технокряк</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <!-- 2 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-2.jpg" alt="Дизайн постера" width="370">
+              <h2>Постер New Orlean vs Golden Star</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <!-- 3 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-3.jpg" alt="Логотип ресторана" width="370">
+              <h2>Ресторан Seafood</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <!-- 4 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-4.jpg" alt="Фото продукта (наушники)" width="370">
+              <h2>Проект Prime</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <!--5  -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-5.jpg" alt="Фото презентации проекта" width="370">
+              <h2>Проект Boxes</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+          <!-- 6 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-6.jpg" alt="Внешний вид веб-сайта" width="370">
+              <h2>Inspiration has no Borders</h2>
+              <p>Веб-сайт</p>
+            </a>
+          </li>
+          <!-- 7 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-7.jpg" alt="Дизайн издания" width="370">
+              <h2>Издание Limited Edition</h2>
+              <p>Дизайн</p>
+            </a>
+          </li>
+          <!-- 8 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-8.jpg" alt="Этикетка продукта" width="370">
+              <h2>Проект LAB</h2>
+              <p>Маркетинг</p>
+            </a>
+          </li>
+          <!-- 9 -->
+          <li>
+            <a href="">
+              <img src="./images/portfolio-9.jpg" alt="Главный интерфейс приложения" width="370">
+              <h2>Growing Business</h2>
+              <p>Приложение</p>
+            </a>
+          </li>
+        </ul>
+      </section>
+    </main>
     <!-- footer  -->
     <footer>
       <a href="./index.html">WebStudio</a>
