--- a/portfolio.html
+++ b/portfolio.html
@@ -9,26 +9,25 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
-    <!-- <link href="css/styles.css" rel="stylesheet"></link> -->
+    <link href="css/styles.css" rel="stylesheet"></link>
     
   </head>
   <body>
     <!-- header -->
-    <header>
+    <header class="header">
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="header-logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <ul>
-          <li><a href="">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+          <li><a class="header-link" href="">Студия</a></li>
+          <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="header-link" href="">Контакты</a></li>
         </ul>
       </nav>
       <ul>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="header-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="header-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
       </ul>
     </header>
-
     <!-- main -->
     <main>
       <section>
