--- a/index.html
+++ b/index.html
@@ -31,35 +31,35 @@
     <!-- main -->
     <main>
         <!-- hero -->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="hero-btn">Заказать услугу</button>
         </section>
         <!-- особенности -->
-        <section>
+        <section class="feature">
             <h2>Особенности</h2>
             <ul>
                 <li>
-                    <h3>Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <h3 class="feature-title">Внимание к деталям</h3>
+                    <p class="feature-paragraph">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <h3 class="feature-title">Пунктуальность</h3>
+                    <p class="feature-paragraph">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <h3 class="feature-title">Планирование</h3>
+                    <p class="feature-paragraph">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <h3 class="feature-title">Современные технологии</h3>
+                    <p class="feature-paragraph">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
         <!-- Чем мы занимаемся -->
-        <section>
-            <h2>Чем мы занимаемся</h2>
+        <section class="we-doing">
+            <h2 class="title">Чем мы занимаемся</h2>
             <ul>
                 <li><img src="./images/img.jpg" width="370" alt="программирование"></li>
                 <li><img src="./images/box-2.jpg" width="370" alt="стилизация"></li>
