--- a/index.html
+++ b/index.html
@@ -9,14 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./css/styles.css"> -->
     <link href="css/styles.css" rel="stylesheet"></link>
 </head>
 <body>
     <!-- header -->
     <header class="header">
         <nav>
-            <a class="header-logo" href="./index.html"><span class="web">Web</span>Studio</a>
+            <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
             <ul>
                 <li><a class="header-link" href="">Студия</a></li>
                 <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
@@ -67,36 +66,36 @@
             </ul>
         </section>
         <!-- Наша команда -->
-        <section>
-            <h2>Наша команда</h2>
+        <section class="team">
+            <h2 class="team-title">Наша команда</h2>
             <ul>
                 <li><img src="./images/img-2.jpg" width="270" alt="Игорь Демьяненко">
-                    <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <h3 class="team-name">Игорь Демьяненко</h3>
+                    <p class="team-paragrap">Product Designer</p>
                 </li>
                 <li><img src="./images/img-3.jpg" width="270" alt="Ольга Репина">
-                    <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <h3 class="team-name">Ольга Репина</h3>
+                    <p class="team-paragrap">Frontend Developer</p>
                 </li>
                 <li><img src="./images/img-4.jpg" width="270" alt="Николай Тарасов">
-                    <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <h3 class="team-name">Николай Тарасов</h3>
+                    <p class="team-paragrap">Marketing</p>
                 </li>
                 <li><img src="./images/img-5.jpg" width="270" alt="Михаил Ермаков">
-                    <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <h3 class="team-name">Михаил Ермаков</h3>
+                    <p class="team-paragrap">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <!-- footer  -->
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
+    <footer class="footer">
+        <a class="logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <address class="address">
             <ul>
-                <li><a href="https://goo.gl/maps/tFrqAYimS7p1wqo49">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="address-map" href="https://goo.gl/maps/tFrqAYimS7p1wqo49">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a class="address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a class="address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             </ul>
         </address>
     </footer>
