--- a/portfolio.html
+++ b/portfolio.html
@@ -118,16 +118,13 @@
       </section>
     </main>
     <!-- footer  -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
+    <footer class="footer">
+      <a class="logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+      <address class="address">
         <ul>
-          <li>
-            <a href="https://goo.gl/maps/tFrqAYimS7p1wqo49"
-              >г. Киев, пр-т Леси Украинки, 26</a>
-          </li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="address-map" href="https://goo.gl/maps/tFrqAYimS7p1wqo49">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a class="address-contact" href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a class="address-contact" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         </ul>
       </address>
     </footer>
