--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <!-- header -->
     <header class="header">
       <nav>
-        <a class="header-logo" href="./index.html"><span class="web">Web</span>Studio</a>
+        <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
         <ul>
           <li><a class="header-link" href="">Студия</a></li>
           <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
