--- a/portfolio.html
+++ b/portfolio.html
@@ -30,15 +30,15 @@
     </header>
     <!-- main -->
     <main>
-      <section>
+      <section class="portfolio">
         <h1>Портфолио</h1>
         <!-- фильтр -->
-        <ul>
-          <li><button type="button">Все</button></li>
-          <li><button type="button">Веб-сайты</button></li>
-          <li><button type="button">Приложения</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="filter">
+          <li><button class="filter-btn" type="button">Все</button></li>
+          <li><button class="filter-btn" type="button">Веб-сайты</button></li>
+          <li><button class="filter-btn" type="button">Приложения</button></li>
+          <li><button class="filter-btn" type="button">Дизайн</button></li>
+          <li><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <!-- карточки -->
         <ul>
