--- a/portfolio.html
+++ b/portfolio.html
@@ -41,76 +41,76 @@
           <li><button class="filter-btn" type="button">Маркетинг</button></li>
         </ul>
         <!-- карточки -->
-        <ul>
+        <ul class="">
           <!-- 1 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-1.jpg" alt="Внешний вид веб-сайта" width="370">
-              <h2>Технокряк</h2>
+              <h2 class="card-title">Технокряк</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <!-- 2 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-2.jpg" alt="Дизайн постера" width="370">
-              <h2>Постер New Orlean vs Golden Star</h2>
+              <h2 class="card-title">Постер New Orlean vs Golden Star</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <!-- 3 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-3.jpg" alt="Логотип ресторана" width="370">
-              <h2>Ресторан Seafood</h2>
+              <h2 class="card-title">Ресторан Seafood</h2>
               <p>Приложение</p>
             </a>
           </li>
           <!-- 4 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-4.jpg" alt="Фото продукта (наушники)" width="370">
-              <h2>Проект Prime</h2>
+              <h2 class="card-title">Проект Prime</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <!--5  -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-5.jpg" alt="Фото презентации проекта" width="370">
-              <h2>Проект Boxes</h2>
+              <h2 class="card-title">Проект Boxes</h2>
               <p>Приложение</p>
             </a>
           </li>
           <!-- 6 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-6.jpg" alt="Внешний вид веб-сайта" width="370">
-              <h2>Inspiration has no Borders</h2>
+              <h2 class="card-title">Inspiration has no Borders</h2>
               <p>Веб-сайт</p>
             </a>
           </li>
           <!-- 7 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-7.jpg" alt="Дизайн издания" width="370">
-              <h2>Издание Limited Edition</h2>
+              <h2 class="card-title">Издание Limited Edition</h2>
               <p>Дизайн</p>
             </a>
           </li>
           <!-- 8 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-8.jpg" alt="Этикетка продукта" width="370">
-              <h2>Проект LAB</h2>
+              <h2 class="card-title">Проект LAB</h2>
               <p>Маркетинг</p>
             </a>
           </li>
           <!-- 9 -->
           <li>
-            <a href="">
+            <a class="card" href="">
               <img src="./images/portfolio-9.jpg" alt="Главный интерфейс приложения" width="370">
-              <h2>Growing Business</h2>
+              <h2 class="card-title">Growing Business</h2>
               <p>Приложение</p>
             </a>
           </li>
