--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header class="header">
         <nav>
-            <a class="logo" href="./index.html"><span class="web">Web</span>Studio</a>
+            <a class="logo" href="./index.html"><span class="word-web">Web</span>Studio</a>
             <ul>
                 <li><a class="header-link" href="">Студия</a></li>
                 <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
@@ -90,7 +90,7 @@
     </main>
     <!-- footer  -->
     <footer class="footer">
-        <a class="logo" href="./index.html"><span class="web">Web</span><span class="studio">Studio</span></a>
+        <a class="logo" href="./index.html"><span class="word-web">Web</span><span class="word-studio">Studio</span></a>
         <address class="address">
             <ul>
                 <li><a class="address-map" href="https://goo.gl/maps/tFrqAYimS7p1wqo49">г. Киев, пр-т Леси Украинки, 26</a></li>
