--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
     <!-- main -->
     <main>
       <section class="portfolio">
-        <h1>Портфолио</h1>
+        <h1 class="portfolio-head">Портфолио</h1>
         <!-- фильтр -->
         <ul class="filter">
           <li><button class="filter-btn" type="button">Все</button></li>
