--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <!-- особенности -->
         <section class="feature">
-            <h2>Особенности</h2>
+            <h2 class="feature-head">Особенности</h2>
             <ul>
                 <li>
                     <h3 class="feature-title">Внимание к деталям</h3>
