--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
       <nav>
         <a class="logo" href="./index.html"><span class="word-web">Web</span>Studio</a>
         <ul>
-          <li><a class="header-link" href="">Студия</a></li>
+          <li><a class="header-link" href="./index.html">Студия</a></li>
           <li><a class="header-link" href="./portfolio.html">Портфолио</a></li>
           <li><a class="header-link" href="">Контакты</a></li>
         </ul>
